translating sidebar items and fixing translating issues

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -1,12 +1,20 @@
 {
     "name":  "عمر العيثاوي",
     "job": "مطور مواقع",
+
     "description_first" : " طالب هندسة حاسبات و مطور مواقع شغوف",
     "description_second" : "في رحلة للتعلم و انا  اعمل كمطور مواقع منذ 250 سنة",
     "word_rotating_1" : "مصصم مواقع",
     "word_rotating_2" : "مطور مواقع",
     "word_rotating_3" : "مصصم واجهات",
     "word_rotating_4" : "مطور واجهات",
-    "intro":"مرحبا , انا"
+    "intro":"مرحبا , انا",
+
+    "home":"الصفحة الرئيسية",
+    "about":"عني",
+    "projects":"مشاريع",
+    "resume":"سيرة الذاتية",
+    "contact":"اتصل بي"
+    
     
 }
