--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -2,7 +2,7 @@
     "name":  "عمر العيثاوي",
     "job": "مطور مواقع",
 
-    "description_first" : " طالب هندسة حاسبات و مطور مواقع شغوف",
+    "description_first" : " طالب هندسة حاسبات و ",
     "description_second" : "في رحلة للتعلم و انا  اعمل كمطور مواقع منذ 250 سنة",
     "word_rotating_1" : "مصصم مواقع",
     "word_rotating_2" : "مطور مواقع",
