--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -14,7 +14,25 @@
     "about":"عني",
     "projects":"مشاريع",
     "resume":"سيرة الذاتية",
-    "contact":"اتصل بي"
+    "contact":"اتصل بي",
+
+    "about_description": "مرحبا جميعا, انا مطور واجهات من العراق اعيش حاليا في اسطنبول .و وانا طالب هندسة في جامعة التن باش. تعلم البرمجة اعطاني فكرة عن كيفية التعلم بشكل اسرع, وحل المشاكل والعمل الجماعي " ,
+
+
+    "board_project_description" : "توفر قبعات التفكير الست والفكر المرتبط بالفكرة الموازية وسيلة للمجموعات لتخطيط عمليات التفكير بطريقة تفصيلية ومتماسكة, ومن خلال القيام بذلك للتفكير معا بشكل أكثر فعالية.",
+    "board_project_title" : "قبعات التفكير الست",
+    "live_demo":"عرض مباشر",
+
+    "movie_project_description": "هو موقع ويب يسمح لك بالبحث عن أي فيلم أو ممثل أو ممثلات.",
+    "movie_project_title" : "تطبيق الافلام",
+
+    "summary" : "ملخص",
+    "summary_description": "مطور واجهات مع خبرة في الفايربيس. اعطاني بناء المةاقع و دراسة التقنيات الجديدة فهما قويا حول كيفية حل المشاكل والتواصل والعمل ومع الفريق ز",
+
+    "education" :"التعليم",
+    "education_description": "",
+
+    "skills":"المهارات"
     
     
 }
