adding capstone project

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -26,6 +26,9 @@
     "movie_project_description": "هو موقع ويب يسمح لك بالبحث عن أي فيلم أو ممثل أو ممثلات.",
     "movie_project_title" : "تطبيق الافلام",
 
+    "capstone_project_description":"موقع إلكتروني للتجارة الإلكترونية يحتوي على مدونة تعليمية صحية ، ومشروع تم إنشاؤه باستخدام ReactJs و firebوwordpress",
+    "capstone_project_title":"موقع التجارة الإلكترونية الصحية",
+
     "summary" : "ملخص",
     "summary_description": "مطور واجهات مع خبرة في الفايربيس. اعطاني بناء المةاقع و دراسة التقنيات الجديدة فهما قويا حول كيفية حل المشاكل والتواصل والعمل ومع الفريق ز",
 
