--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -24,6 +24,9 @@
     "movie_project_description": "Is a website which allows you to search for any movie and actor or actresses.",
     "movie_project_title":"Movie app",
 
+    "capstone_project_description":"E-commerce website with a health educational blog, project  made with reactJs, firebase, wordpress.",
+    "capstone_project_title":"Health E-commerce",
+
     "summary" : "Summary",
     "summary_description": "Junior Front-End developer with experience in Firebase. Building websites and learning about new technologies gave me a strong understanding about how to solve problems and communicate and work with teams.",
 
